# Copyright (C) 2008-2020 EDF R&D
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#
# Author: André Ribes, andre.ribes@edf.fr, EDF R&D

include $(top_srcdir)/adm_local/make_common_starter.am

DATA_INST = \
        test001_ADAO_JDC_using_strings.comm \
        test001_ADAO_JDC_using_strings.py \
        test002_ADAO_JDC_using_strings.comm \
        test002_ADAO_JDC_using_strings.py \
        test003_ADAO_JDC_using_scripts.comm \
        test003_ADAO_JDC_using_scripts.py \
        test003_ADAO_scripts_for_JDC.py \
        test003_bis_ADAO_JDC_using_user_data_init.comm \
        test003_bis_ADAO_JDC_using_user_data_init.py \
        test003_bis_ADAO_scripts_for_JDC.py \
        test003_bis_ADAO_user_data_init.py \
        test004_ADAO_JDC_using_scripts.comm \
        test004_ADAO_JDC_using_scripts.py \
        test004_ADAO_scripts_for_JDC.py \
        test005_ADAO_Operators.comm\
        test005_ADAO_Operators.py \
        test005_ADAO_scripts_for_JDC.py \
        test006_Observers.comm \
        test006_Observers_init.py \
        test006_Observers_Observation_Operator.py \
        test006_Observers_observer_with_file.py \
        test006_Observers.py \
        test006_Observers_var.py \
        test008_ADAO_Elementary_GradientTest.comm \
        test008_ADAO_Elementary_GradientTest.py \
        test009_ADAO_Simple_GradientTest.comm \
        test009_ADAO_Simple_GradientTest.py \
        test010_ADAO_Simple_AdjointTest.comm \
        test010_ADAO_Simple_AdjointTest.py

examplesdasalome_DATA = ${DATA_INST}

EXTRA_DIST = \
        test001_ADAO_JDC_using_strings.comm \
        test001_ADAO_JDC_using_strings.py \
        test002_ADAO_JDC_using_strings.comm \
        test002_ADAO_JDC_using_strings.py \
        test003_ADAO_JDC_using_scripts.comm.in \
        test003_ADAO_JDC_using_scripts.py.in \
        test003_ADAO_scripts_for_JDC.py \
        test003_bis_ADAO_JDC_using_user_data_init.comm.in \
        test003_bis_ADAO_JDC_using_user_data_init.py.in \
        test003_bis_ADAO_scripts_for_JDC.py \
        test003_bis_ADAO_user_data_init.py \
        test004_ADAO_JDC_using_scripts.comm.in \
        test004_ADAO_JDC_using_scripts.py.in \
        test004_ADAO_scripts_for_JDC.py \
        test005_ADAO_Operators.comm.in \
        test005_ADAO_Operators.py.in \
        test005_ADAO_scripts_for_JDC.py \
        test006_Observers.comm.in \
        test006_Observers_init.py \
        test006_Observers_Observation_Operator.py \
        test006_Observers_observer_with_file.py \
        test006_Observers.py.in \
        test006_Observers_var.py \
        test008_ADAO_Elementary_GradientTest.comm \
        test008_ADAO_Elementary_GradientTest.py \
        test009_ADAO_Simple_GradientTest.comm \
        test009_ADAO_Simple_GradientTest.py \
        test010_ADAO_Simple_AdjointTest.comm \
        test010_ADAO_Simple_AdjointTest.py
