include $(top_srcdir)/adm_local/make_common_starter.am

DATA_INST = \
	    test001_ADAO_JDC_using_strings.comm \
	    test002_ADAO_JDC_using_strings.comm \
	    test003_ADAO_JDC_using_scripts.comm \
	    test003_ADAO_scripts_for_JDC.py \
	    test004_ADAO_JDC_using_scripts.comm \
	    test004_ADAO_scripts_for_JDC.py

samplesdasalome_DATA = ${DATA_INST}

EXTRA_DIST = \
	     test001_ADAO_JDC_using_strings.comm \
	     test002_ADAO_JDC_using_strings.comm \
	     test003_ADAO_JDC_using_scripts.comm.in \
	     test003_ADAO_scripts_for_JDC.py \
	     test004_ADAO_JDC_using_scripts.comm.in \
	     test004_ADAO_scripts_for_JDC.py
