#
# Copyright (C) 2008-2016 EDF R&D
#
# This file is part of SALOME ADAO module
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#
# Author: Jean-Philippe Argaud, jean-philippe.argaud@edf.fr, EDF R&D

include $(top_srcdir)/adm_local/make_common_starter.am

mypkgpythondir =$(salomepythondir)/daEficas

mypkgpython_PYTHON = \
		configuration_ADAO.py \
		convert_adao.py \
		generator_adao.py \
		__init__.py \
		prefs_ADAO.py \
		prefs.py \
		traduitADAOsansToV8_2_0.py \
		traduitADAOV7_4_0ToV8_2_0.py \
		traduitADAOV7_5_0ToV8_2_0.py \
		traduitADAOV7_5_1ToV8_2_0.py \
		traduitADAOV7_6_0ToV8_2_0.py \
		traduitADAOV7_7_0ToV8_2_0.py \
		traduitADAOV7_8_0ToV8_2_0.py \
		traduitADAOV8_1_0ToV8_2_0.py

EXTRA_DIST = prefs_ADAO.py.in
