include $(top_srcdir)/adm_local/make_common_starter.am

DATA_INST = \
	    test000_Blue_AnalysisCode.py test000_Blue_AnalysisFile.py test000_Blue.py \
	    test017_3DVAR_function_script.py test017_3DVAR_init_data.py \
	    test017.comm \
	    test_aster_zzzz159a_background_error.py \
	    test_aster_zzzz159a_background.py \
	    test_aster_zzzz159a_observation_error.py \
	    test_aster_zzzz159a_observation.py \
	    test_aster_zzzz159a_functions.py \
	    test_aster_zzzz159a_aster_functions.py \
	    test_aster_zzzz159a_init_algorithm.py \
	    test_aster_zzzz159a_init_parameters.py \
	    test_aster_zzzz159a_init_algorithm_LBFGSB.py \
	    zzzz159a.3  zzzz159a.export.esclave  zzzz159a.mail \
	    test_aster_zzzz159a_LBFGSB.comm

testsdasalome_DATA = ${DATA_INST}

EXTRA_DIST = test000_Blue_AnalysisCode.py test000_Blue_AnalysisFile.py.in test000_Blue.py \
	     test017_3DVAR_function_script.py test017_3DVAR_init_data.py \
	     test017.comm.in \
	     test_aster_zzzz159a_background_error.py \
	     test_aster_zzzz159a_background.py \
	     test_aster_zzzz159a_observation_error.py \
	     test_aster_zzzz159a_observation.py \
	     test_aster_zzzz159a_functions.py \
	     test_aster_zzzz159a_aster_functions.py \
	     test_aster_zzzz159a_init_algorithm.py \
	     test_aster_zzzz159a_init_parameters.py.in \
	     test_aster_zzzz159a.py.in \
	     test_aster_zzzz159a_init_algorithm_LBFGSB.py \
	     zzzz159a.3  zzzz159a.export.esclave.in  zzzz159a.mail \
	     test_aster_zzzz159a_LBFGSB.comm.in
