include $(top_srcdir)/adm_local/make_common_starter.am

DATA_INST = \
	    test000_Etude_ADD.py \
	    test001_Blue.py \
	    test002_Blue.py \
	    test003_Blue.py \
	    test004_Blue.py \
	    test005_Blue.py \
	    test006_Blue_ReduceVariance.py \
	    test007_Blue.py \
	    test008_Kalman.py \
	    test009_Blue_EspaceVeta.py \
	    test010_Kalman_sur_trajectoire_1D.py \
	    test012_LinearLeastSquares.py \
	    test013_EnsembleBlue.py \
	    test014_Persistence_et_Blue_en_boucle.py \
	    test015_3DVAR.py \
	    test016_3DVAR_par_fonction.py \
	    test017_3DVAR_par_fonction.py \
	    test018_3DVAR_par_fonction_avec_bornes.py \
	    test101_RMS.py \
	    test102_PlotVector.py \
	    test103_PlotVectors.py \
	    test104_HomogeneiteKhi2.py \
	    test105_VarianceOrder.py \
	    test106_CompareVarianceFisher.py \
	    test107_GaussianAdequation.py \
	    test108_StopReductionVariance.py \
	    test109_HLinearity.py \
	    test300_Optimize_CG.py \
	    test301_Optimize_BFGS.py \
	    test302_Optimize_LBFGS.py \
	    test303_Optimize_TNC.py \
	    test901_Informations_dynamiques.py \
	    test902_Demonstrations_de_logging.py

GEN_DATA_INST = context.py

testsplateforme_DATA = ${DATA_INST} ${GEN_DATA_INST}

EXTRA_DIST = ${DATA_INST} context.py.in

