include $(top_srcdir)/adm_local/make_common_starter.am

DATA_INST = \
	    test000_Etude_ADD.py \
	    test001_Blue.py \
	    test002_Blue.py \
	    test003_Blue.py \
	    test004_Blue.py \
	    test005_Blue.py \
	    test007_Blue.py \
	    test008_Kalman.py \
	    test012_LinearLeastSquares.py \
	    test013_EnsembleBlue.py \
	    test015_3DVAR.py \
	    test018_3DVAR_par_fonction_avec_bornes.py \
	    test101_RMS.py \
	    test102_PlotVector.py \
	    test103_PlotVectors.py

testsplateforme_DATA = ${DATA_INST}

EXTRA_DIST = ${DATA_INST}

